# UProf

./: .gitignore  .vimrc  Makefile.am  README  autogen.sh  configure.in  uprof.pc.in
autotools/: .gitignore
autotools/m4/: .gitignore
doc/reference/: Makefile.am
doc/reference/uprof/: Makefile.am  uprof-docs.sgml  uprof-sections.txt  version.xml.in
src/: Makefile.am
tests/: Makefile.am  custom-attributes.c  dbus-service.c  dlopen.c  linking.c  module.c  recursion.c  sanity_check.c  simple.c  suspend.c  suspend2.c  suspend3.c
uprof/: Makefile.am  org.freedesktop.UProf.Reportable.xml  org.freedesktop.UProf.Service.xml  uprof-context-private.h  uprof-context.c  uprof-context.h  uprof-counter-result-private.h  uprof-counter-result.c  uprof-counter-result.h  uprof-counter.c  uprof-counter.h  uprof-dbus-private.h  uprof-dbus.c  uprof-dbus.h  uprof-object-state-private.h  uprof-object-state.c  uprof-object-state.h  uprof-private.h  uprof-report-private.h  uprof-report-proxy-private.h  uprof-report-proxy.c  uprof-report-proxy.h  uprof-report.c  uprof-report.h  uprof-service-private.h  uprof-service.c  uprof-timer-result-private.h  uprof-timer-result.c  uprof-timer-result.h  uprof-timer.c  uprof-timer.h  uprof-tool.c  uprof.c  uprof.h
