SUBDIRS = uprof tests
#SUBDIRS += doc
#SUBDIRS += po

ACLOCAL_AMFLAGS = -I autotools/m4

#EXTRA_DIST = \
#	intltool-extract.in \
#	intltool-merge.in \
#	intltool-update.in \
#	config.rpath \
#	m4/ChangeLog


#DISTCLEANFILES = \
#        intltool-extract \
#        intltool-merge \
#        intltool-update

