SUBDIRS = uprof tests doc
#SUBDIRS += po

ACLOCAL_AMFLAGS = -I autotools/m4

pcfiles = uprof-@UPROF_MAJOR_VERSION@.@UPROF_MINOR_VERSION@.pc

pkgconfig_DATA = $(pcfiles)
pkgconfigdir   = $(libdir)/pkgconfig

#EXTRA_DIST = \
#	intltool-extract.in \
#	intltool-merge.in \
#	intltool-update.in \
#	config.rpath \
#	m4/ChangeLog


#DISTCLEANFILES = \
#        intltool-extract \
#        intltool-merge \
#        intltool-update

